[package]
name = "md2pdf"
version = "0.0.3"
authors = ["Thomas Forgione <thomas@forgione.fr>"]
description = "A small utility to convert markdown files to pdf exploiting tectonic."
edition = "2021"
license = "MIT"
repository = "https://gitea.tforgione.fr/tforgione/md2pdf"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tectonic = "0.9"
pulldown-cmark = "0.5.3"
clap = { version = "4.0.7", features = ["cargo"] }
convert_case = "0.6.0"

[lib]
name = "md2pdf"
path = "src/lib.rs"

[[bin]]
name = "md2pdf"
path = "src/main.rs"

[dev-dependencies]
pretty_assertions = "1.3.0"
lopdf = "0.27.0"
